# stock_wave

./: .gitignore  .gitmodules  Installation.md  Makefile  README.md  app.spec  build.gradle  bundle-python.sh  local.properties  pubspec.yaml  pyproject.toml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: app.dart  config.dart  constants.dart  injection.config.dart  injection.dart  main.dart
lib/api/: api.pb.dart  api.pbenum.dart  api.pbjson.dart  api.pbserver.dart  service.pb.dart  service.pbenum.dart  service.pbgrpc.dart  service.pbjson.dart  service.pbserver.dart
lib/client/: client.dart  init_py.dart  py_file_info.dart
lib/grpc_generated/: client.dart  init_py.dart
lib/middleware/: auth_guard.dart
lib/routing/: router.dart  router.gr.dart
lib/screens/: dashboard_screen.dart  home_screen.dart  home_ui.dart  search_ui.dart
lib/services/: api_service.dart  app.module.dart
lib/utils/: utils.dart
lib/widgets/: bottom_tool_window.dart  left_tool_window.dart  main_content_area.dart  right_tool_window.dart  rounded_icon.dart  side_bar.dart  stock_chart.dart  top_tool_window.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
server/: app.py  app.spec  app1.py  cli_ma.py  config.py  constants.py  hook-fastapi.py  server.py  server_py_flutter_osx.spec  updater_cli.py
server/api/: api.proto  api_pb2.py  api_pb2_grpc.py  service.proto  service_pb2.py  service_pb2_grpc.py
server/biz/: scan.py
server/client/: client.py
templates/: init_py.dart
test/: widget_test.dart
windows/: CMakeLists.txt
(+26 files in other folders)
