[project]
name = "stock_insight"
version = "1.0.0"
description = "Your package description here"
authors = [{ "name" = "psycoex", "email" = "abc@xyz.com" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stock-insight"
version = "0.0.1"
description = ""
authors = ["Abhishek Patidar <iabhipatidar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.26.0"
flask = "^2.1.0"
uvicorn = "^0.30.0"
fastapi = "^0.112.0"
loguru = "^0.7.2"
pydantic = "^2.8.2"
python-socketio = "5.11.3"
pyinstaller = "^6.10.0"
pyinstaller-hooks-contrib = "^2024.8"
joblib = "^1.4.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
nse = "^1.0.3"
tzlocal = "^5.2"
ta-lib = "^0.4.32"
pandas-ta = "^0.3.14b0"
duckdb = "^1.0.0"
peewee = "^3.17.6"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
mypy = "^1.0"
poetry-core = "^1.9.0"

[project.scripts]
jdata = "stock_insight.cli:cli"